# ros_laba

./: README.md
dino_generator/: CMakeLists.txt  launch.launch  package.xml
dino_generator/src/: generator.cpp  generator.hpp  main.cpp
dino_service/: CMakeLists.txt  package.xml
